// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeBigint should return false for {} 1`] = `
Object {
  "message": "    
    expected type to be Bigint.
    received: 'object'
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for 1 1`] = `
Object {
  "message": "    
    expected type to be Bigint.
    received: 'number'
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for Symbol() 1`] = `
Object {
  "message": "    
    expected type to be Bigint.
    received: 'symbol'
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for aa 1`] = `
Object {
  "message": "    
    expected type to be Bigint.
    received: 'string'
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for bigint with isNot true 1`] = `
Object {
  "message": "    
    expected type not to be Bigint.
    received: 'bigint'
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for null 1`] = `
Object {
  "message": "    
    expected type to be Bigint.
    received: 'null'
",
  "pass": false,
}
`;

exports[`testing toBeBigint should return false for undefined 1`] = `
Object {
  "message": "    
    expected type to be Bigint.
    received: 'undefined'
",
  "pass": false,
}
`;
